Add codespell to pre-commit

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,6 +19,10 @@ repos:
     hooks:
     -   id: black
         args: [--line-length=79, --skip-string-normalization]
+-   repo: https://github.com/codespell-project/codespell
+    rev: v2.1.0
+    hooks:
+    -    id: codespell
 -   repo: https://github.com/PyCQA/flake8
     rev: 4.0.1
     hooks:
