--- a/setup.cfg
+++ b/setup.cfg
@@ -42,6 +42,15 @@ exclude =
 [bdist_wheel]
 universal = True
 
+[codespell]
+skip =
+    .git,
+    .github,
+    __pycache__,
+    build,
+    dist,
+    .*egg-info,
+
 [coverage:run]
 plugins = covdefaults
 omit = examples
