--- a/setup.cfg
+++ b/setup.cfg
@@ -33,11 +33,15 @@ install_requires =
     requests>=2.20.0
     urllib3>=1.25.0
 python_requires = >=3.7
+include_package_data = True
 
 [options.packages.find]
 exclude =
     tests*
     testing*
+
+[options.package_data]
+* = py.typed
 
 [bdist_wheel]
 universal = True
