Fix mypy tests/testing packages and update tests workflow
tests/ and testing/ did not have __init__.py files so the mypy rules in setup.cfg were not being applied to them.

Add timeout to tests workflow and allow rerunning on web interface dispatch.

--- a/setup.cfg
+++ b/setup.cfg
@@ -79,7 +79,9 @@ warn_unused_configs = true
 warn_unused_ignores = true
 
 [mypy-testing.*]
-disallow_untyped_defs = false
+allow_incomplete_defs = true
+allow_untyped_defs = true
 
 [mypy-tests.*]
-disallow_untyped_defs = false
+allow_incomplete_defs = true
+allow_untyped_defs = true
