--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -5,9 +5,11 @@ on:
     branches: [main]
     tags:
   pull_request:
+  workflow_dispatch:
 
 jobs:
   tests:
+    timeout-minutes: 30
 
     strategy:
       matrix:
