--- a/tox.ini
+++ b/tox.ini
@@ -2,11 +2,11 @@
 envlist = py37, py38, py39, py310, py311, pre-commit, docs
 
 [testenv]
-deps = -rrequirements-dev.txt
+extras = dev
 commands =
     coverage erase
     coverage run -m pytest {posargs}
-    coverage report --no-skip-covered
+    coverage report
 
 [testenv:pre-commit]
 skip_install = true
