--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,36 +1,35 @@
 ci:
-    autofix_prs: false
-
+  autofix_prs: false
 repos:
--   repo: https://github.com/pre-commit/pre-commit-hooks
+  - repo: 'https://github.com/pre-commit/pre-commit-hooks'
     rev: v4.4.0
     hooks:
-    -   id: mixed-line-ending
-    -   id: trailing-whitespace
-    -   id: end-of-file-fixer
-    -   id: check-added-large-files
-    -   id: check-docstring-first
-    -   id: check-json
-    -   id: check-yaml
-    -   id: check-merge-conflict
-    -   id: name-tests-test
-    -   id: double-quote-string-fixer
--   repo: https://github.com/psf/black
+      - id: mixed-line-ending
+      - id: trailing-whitespace
+      - id: end-of-file-fixer
+      - id: check-added-large-files
+      - id: check-docstring-first
+      - id: check-json
+      - id: check-yaml
+      - id: check-merge-conflict
+      - id: name-tests-test
+      - id: double-quote-string-fixer
+  - repo: 'https://github.com/psf/black'
     rev: 22.12.0
     hooks:
-    -   id: black
--   repo: https://github.com/codespell-project/codespell
+      - id: black
+  - repo: 'https://github.com/codespell-project/codespell'
     rev: v2.2.2
     hooks:
-    -    id: codespell
--   repo: https://github.com/charliermarsh/ruff-pre-commit
-    rev: 'v0.0.236'
+      - id: codespell
+  - repo: 'https://github.com/charliermarsh/ruff-pre-commit'
+    rev: v0.0.236
     hooks:
-    -   id: ruff
-        args: [--fix]
--   repo: https://github.com/pre-commit/mirrors-mypy
+      - id: ruff
+        args:
+          - '--fix'
+  - repo: 'https://github.com/pre-commit/mirrors-mypy'
     rev: v0.991
     hooks:
-    -   id: mypy
-        # Add any additional typed package dependencies here
+      - id: mypy
         additional_dependencies: []
