Change import sorting

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -90,6 +90,7 @@ target-version = "py37"
 [tool.ruff.isort]
 force-single-line = true
 known-first-party = ["foobar", "test", "testing"]
+order-by-type = false
 required-imports = ["from __future__ import annotations"]
 
 [tool.ruff.per-file-ignores]
