--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "foobar"
-version = "0.0.1"
+version = "0.1.0"
 authors = [
     {name = "foobar author"},
     {email = "foobar@foobar.com"},
@@ -41,6 +41,15 @@ dev = [
     "ruff",
     "tox",
     "virtualenv",
+]
+docs = [
+    "black",
+    "mkdocs-gen-files",
+    "mkdocs-literate-nav",
+    "mkdocs-material",
+    "mkdocs-section-index",
+    "mkdocstrings[python]",
+    "mike",
 ]
 
 [tool.black]
