--- a/tox.ini
+++ b/tox.ini
@@ -14,6 +14,5 @@ deps = pre-commit
 commands = pre-commit run --all-files --show-diff-on-failure
 
 [testenv:docs]
-changedir = docs
-deps = -rdocs/requirements.txt
-commands = sphinx-build -W -E -b html . _build/html
+extras = docs
+commands = mkdocs build --strict
