--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py38, py39, py310, py311, pre-commit, docs
+envlist = py38, py39, py310, py311, py312, pre-commit, docs
 
 [testenv]
 extras = dev
