--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -137,6 +137,7 @@ plugins:
           import:
             - https://docs.python.org/3/objects.inv
           options:
+            annotations_path: brief
             docstring_section_style: list
             docstring_style: google
             inherited_members: yes
@@ -144,8 +145,11 @@ plugins:
             members_order: source
             merge_init_into_class: yes
             separate_signature: yes
+            show_root_members_full_path: no
+            show_object_full_path: no
             show_root_full_path: yes
             show_signature_annotations: yes
             show_submodules: no
+            signature_crossrefs: yes
   - search
   - section-index
