--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,9 +44,10 @@ docs = [
     "black",
     "mkdocs-gen-files",
     "mkdocs-literate-nav",
-    "mkdocs-material",
+    "mkdocs-material==9.4.7",
     "mkdocs-section-index",
-    "mkdocstrings[python]",
+    "mkdocstrings==0.23.0",
+    "mkdocstrings-python==1.8.0",
     "mike",
 ]
 
