Make latest canonical version and point at last release

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -121,6 +121,9 @@ nav:
       - Releases: contributing/releases.md
 
 plugins:
+  - mike:
+      alias_type: symlink
+      canonical_version: latest
   - gen-files:
       scripts:
         - docs/generate_api.py
