--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -59,4 +59,4 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/')
         run: |
           pip install .[docs]
-          mike deploy --push "${{ env.PACKAGE_VERSION }}"
+          mike deploy --push --update-aliases "${{ env.PACKAGE_VERSION }}" latest
