--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,14 +41,15 @@ dev = [
     "virtualenv",
 ]
 docs = [
-    "black",
-    "mkdocs-gen-files",
-    "mkdocs-literate-nav",
-    "mkdocs-material==9.4.7",
-    "mkdocs-section-index",
-    "mkdocstrings==0.23.0",
-    "mkdocstrings-python==1.8.0",
-    "mike",
+    "black==24.4.2",
+    "mkdocs-click==0.8.1",
+    "mkdocs-gen-files==0.5.0",
+    "mkdocs-literate-nav==0.6.1",
+    "mkdocs-material==9.5.32",
+    "mkdocs-section-index==0.3.9",
+    "mkdocstrings==0.25.2",
+    "mkdocstrings-python==1.10.8",
+    "mike==2.1.3",
 ]
 
 [tool.codespell]
