--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ dev = [
 ]
 docs = [
     "black==24.4.2",
+    "mkdocs-autorefs==1.3.1",
     "mkdocs-click==0.8.1",
     "mkdocs-gen-files==0.5.0",
     "mkdocs-literate-nav==0.6.1",
